--- a/contact-us.html
+++ b/contact-us.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>Contact Us</title>
-  <meta content="Discover how leveraging WhatsApp for targeted marketing and strategic insights can boost your restaurant&#x27;s sales and customer engagement." name="description">
+  <meta content="Discover how leveraging WhatsApp for targeted marketing and strategic insights can boost your E-commerce&#x27;s sales and customer engagement." name="description">
   <meta content="Sales Genio" property="og:title">
-  <meta content="Discover how leveraging WhatsApp for targeted marketing and strategic insights can boost your restaurant&#x27;s sales and customer engagement." property="og:description">
+  <meta content="Discover how leveraging WhatsApp for targeted marketing and strategic insights can boost your E-commerce&#x27;s sales and customer engagement." property="og:description">
   <meta content="images/webclip.png" property="og:image">
   <meta content="Sales Genio" property="twitter:title">
-  <meta content="Discover how leveraging WhatsApp for targeted marketing and strategic insights can boost your restaurant&#x27;s sales and customer engagement." property="twitter:description">
+  <meta content="Discover how leveraging WhatsApp for targeted marketing and strategic insights can boost your E-commerce&#x27;s sales and customer engagement." property="twitter:description">
   <meta content="images/webclip.png" property="twitter:image">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
