--- a/en.html
+++ b/en.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>Sales Genio</title>
-  <meta content="Discover how leveraging WhatsApp for targeted marketing and strategic insights can boost your restaurant&#x27;s sales and customer engagement." name="description">
+  <meta content="Discover how leveraging WhatsApp for targeted marketing and strategic insights can boost your E-commerce&#x27;s sales and customer engagement." name="description">
   <meta content="Sales Genio" property="og:title">
-  <meta content="Discover how leveraging WhatsApp for targeted marketing and strategic insights can boost your restaurant&#x27;s sales and customer engagement." property="og:description">
+  <meta content="Discover how leveraging WhatsApp for targeted marketing and strategic insights can boost your E-commerce&#x27;s sales and customer engagement." property="og:description">
   <meta content="images/webclip.png" property="og:image">
   <meta content="Sales Genio" property="twitter:title">
-  <meta content="Discover how leveraging WhatsApp for targeted marketing and strategic insights can boost your restaurant&#x27;s sales and customer engagement." property="twitter:description">
+  <meta content="Discover how leveraging WhatsApp for targeted marketing and strategic insights can boost your E-commerce&#x27;s sales and customer engagement." property="twitter:description">
   <meta content="images/webclip.png" property="twitter:image">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
@@ -82,7 +82,7 @@
         <div class="content-image"><img src="images/slide111.png" sizes="94vw" srcset="images/slide111-p-500.png 500w, images/slide111-p-800.png 800w, images/slide111.png 956w" alt=""></div>
         <div class="content">
           <h1><strong>Insights on Your Whatsap Sales</strong></h1>
-          <p>Don’t lose your top customers! Our analytics show you who spends the most and how to keep them coming back. Get easy-to-read reports on customer value and spending habits. Boost your business by focusing on the clients who matter most. Try our restaurant analytics today and grow your profits!</p>
+          <p>Don’t lose your top customers! Our analytics show you who spends the most and how to keep them coming back. Get easy-to-read reports on customer value and spending habits. Boost your business by focusing on the clients who matter most. Try our E-commerce analytics today and grow your profits!</p>
         </div>
       </div>
       <div class="w-layout-grid content-grid">
@@ -103,7 +103,7 @@
           <p>
             <a href="https://www.linkedin.com/pulse/apache-spark-20-just-released-join-our-workshop-your-mascarella/">Apache Spark</a><br>
             <a href="https://1drv.ms/p/s!An2Gd26cQ_EKgvwnndO6OKZNFsQvFQ">Spark 2.0 on Azure Suse</a><br>Machine Learning<br>
-            <a href="https://1drv.ms/p/s!An2Gd26cQ_EKgvlgrAwU-h8LJheE2g">IoT</a><br>Social Media Analytics<a href="https://azure.microsoft.com/en-us/documentation/templates/spark-2.0-on-suse"><br>‍</a>Restaurant Guests BI<br>Digital Marketing<a href="http://www.iotevolutionexpo.com/east/agenda.aspx?d=2/07/17&amp;t=IoT+Certification+Course"><br>‍</a>We are <a href="http://learnanalytics.microsoft.com/home/trainingpartners">MICROSOFT OFFICIAL PARTNER</a>
+            <a href="https://1drv.ms/p/s!An2Gd26cQ_EKgvlgrAwU-h8LJheE2g">IoT</a><br>Social Media Analytics<a href="https://azure.microsoft.com/en-us/documentation/templates/spark-2.0-on-suse"><br>‍</a>E-commerce Guests BI<br>Digital Marketing<a href="http://www.iotevolutionexpo.com/east/agenda.aspx?d=2/07/17&amp;t=IoT+Certification+Course"><br>‍</a>We are <a href="http://learnanalytics.microsoft.com/home/trainingpartners">MICROSOFT OFFICIAL PARTNER</a>
           </p>
         </div>
       </div>
