--- a/about-us-value-amplify.html
+++ b/about-us-value-amplify.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>About Us | Sales Genio</title>
-  <meta content="Discover how leveraging WhatsApp for targeted marketing and strategic insights can boost your restaurant&#x27;s sales and customer engagement." name="description">
+  <meta content="Discover how leveraging WhatsApp for targeted marketing and strategic insights can boost your E-commerce&#x27;s sales and customer engagement." name="description">
   <meta content="About Us | Value Amplify" property="og:title">
-  <meta content="Discover how leveraging WhatsApp for targeted marketing and strategic insights can boost your restaurant&#x27;s sales and customer engagement." property="og:description">
+  <meta content="Discover how leveraging WhatsApp for targeted marketing and strategic insights can boost your E-commerce&#x27;s sales and customer engagement." property="og:description">
   <meta content="https://uploads-ssl.webflow.com/667201ed50641502e3b9d41a/6672028d0eb70b14129711c5_logo.jpg" property="og:image">
   <meta content="About Us | Value Amplify" property="twitter:title">
-  <meta content="Discover how leveraging WhatsApp for targeted marketing and strategic insights can boost your restaurant&#x27;s sales and customer engagement." property="twitter:description">
+  <meta content="Discover how leveraging WhatsApp for targeted marketing and strategic insights can boost your E-commerce&#x27;s sales and customer engagement." property="twitter:description">
   <meta content="https://uploads-ssl.webflow.com/667201ed50641502e3b9d41a/6672028d0eb70b14129711c5_logo.jpg" property="twitter:image">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
