--- a/es.html
+++ b/es.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>Sales Genio</title>
-  <meta content="Discover how leveraging WhatsApp for targeted marketing and strategic insights can boost your restaurant&#x27;s sales and customer engagement." name="description">
+  <meta content="Discover how leveraging WhatsApp for targeted marketing and strategic insights can boost your E-commerce&#x27;s sales and customer engagement." name="description">
   <meta content="Sales Genio" property="og:title">
-  <meta content="Discover how leveraging WhatsApp for targeted marketing and strategic insights can boost your restaurant&#x27;s sales and customer engagement." property="og:description">
+  <meta content="Discover how leveraging WhatsApp for targeted marketing and strategic insights can boost your E-commerce&#x27;s sales and customer engagement." property="og:description">
   <meta content="images/webclip.png" property="og:image">
   <meta content="Sales Genio" property="twitter:title">
-  <meta content="Discover how leveraging WhatsApp for targeted marketing and strategic insights can boost your restaurant&#x27;s sales and customer engagement." property="twitter:description">
+  <meta content="Discover how leveraging WhatsApp for targeted marketing and strategic insights can boost your E-commerce&#x27;s sales and customer engagement." property="twitter:description">
   <meta content="images/webclip.png" property="twitter:image">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
@@ -83,7 +83,7 @@
         <div class="content-image"><img src="images/slide111.png" sizes="94vw" srcset="images/slide111-p-500.png 500w, images/slide111-p-800.png 800w, images/slide111.png 956w" alt=""></div>
         <div class="content">
           <h1><strong>Datos de tus ventas en WhatsApp</strong></h1>
-          <p>¡No pierdas a tus mejores clientes! Nuestros análisis te muestran quiénes gastan más y cómo hacer que regresen. Obtén informes fáciles de leer sobre el valor de los clientes y sus hábitos de consumo. Impulsa tu negocio enfocándote en los clientes que más importan. ¡Prueba hoy nuestras analíticas para restaurantes y aumenta tus ganancias!</p>
+          <p>¡No pierdas a tus mejores clientes! Nuestros análisis te muestran quiénes gastan más y cómo hacer que regresen. Obtén informes fáciles de leer sobre el valor de los clientes y sus hábitos de consumo. Impulsa tu negocio enfocándote en los clientes que más importan. ¡Prueba hoy nuestras analíticas para E-commercees y aumenta tus ganancias!</p>
         </div>
       </div>
       <div class="w-layout-grid content-grid">
@@ -104,7 +104,7 @@
           <p>
             <a href="https://www.linkedin.com/pulse/apache-spark-20-just-released-join-our-workshop-your-mascarella/">Apache Spark</a><br>
             <a href="https://1drv.ms/p/s!An2Gd26cQ_EKgvwnndO6OKZNFsQvFQ">Spark 2.0 on Azure Suse</a><br>Machine Learning<br>
-            <a href="https://1drv.ms/p/s!An2Gd26cQ_EKgvlgrAwU-h8LJheE2g">IoT</a><br>Analítica de Redes Sociales<a href="https://azure.microsoft.com/en-us/documentation/templates/spark-2.0-on-suse"><br>‍</a>Inteligencia de Negocios para Clientes de Restaurantes<br>Marketing Digital<a href="http://www.iotevolutionexpo.com/east/agenda.aspx?d=2/07/17&amp;t=IoT+Certification+Course"><br>‍</a>Nosotros somos <a href="http://learnanalytics.microsoft.com/home/trainingpartners">MICROSOFT OFFICIAL PARTNER</a>
+            <a href="https://1drv.ms/p/s!An2Gd26cQ_EKgvlgrAwU-h8LJheE2g">IoT</a><br>Analítica de Redes Sociales<a href="https://azure.microsoft.com/en-us/documentation/templates/spark-2.0-on-suse"><br>‍</a>Inteligencia de Negocios para Clientes de E-commercees<br>Marketing Digital<a href="http://www.iotevolutionexpo.com/east/agenda.aspx?d=2/07/17&amp;t=IoT+Certification+Course"><br>‍</a>Nosotros somos <a href="http://learnanalytics.microsoft.com/home/trainingpartners">MICROSOFT OFFICIAL PARTNER</a>
           </p>
         </div>
       </div>
